# vero

./: DEPENDENCIAS  README.md
src/PTU46_drv2/: CMakeLists.txt  package.xml
src/PTU46_drv2/src/: PTU46_driver_node.cpp  ptu_classes.cpp  ptu_classes.h
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/dvs/: CMakeLists.txt  nodelet_dvs.xml  package.xml
src/dvs/src/: Ctrl.cpp  Ctrl.h  CtrlFactory.cpp  CtrlFactory.h  DDvsCtrl.cpp  DDvsCtrl.h  DVSNodelet.cpp  DVSNodelet.h  DvsCtrl.cpp  DvsCtrl.h  PioneerRobot.cpp  PioneerRobot.h  RobotFactory.cpp  RobotFactory.h  StaubliRobot.cpp  StaubliRobot.h  robot.h
src/dvs/tools/: plotv_c  plotv_r_mes
src/esmlib041/: CMakeLists.txt  README.txt  package.xml
src/esmlib041/include/: esmlib041.h
src/esmlib041/src/: esmlib041.cpp
src/esmocv/: CMakeLists.txt  nodelet_esmocv.xml  package.xml
src/esmocv/launch/: 640image.launch  cork.launch  esmocv.launch  esmocv.perspective  esmocvpioneer.launch  oldwithcontrol_esmocv.launch
src/esmocv/msg/: Dvs_Status.msg
src/esmocv/src/: esmocv.cpp  esmocv.h  esmocv_nodelet.cpp  esmocv_nodelet.h  mask.cpp  mask.h  robot.h
src/esmocv/srv/: SetROI.srv
src/esmocv/test/: callRestartROI.sh  readtxt.m
src/fusion2localise2d/: CMakeLists.txt  Problemas.txt  mainpage.dox  package.xml
src/fusion2localise2d/launch/: fusion2localise2d.launch
src/fusion2localise2d/src/: driver.h  filter.cpp  filter.h  fusion2localise2d_node.cpp  fusion2localise2d_node.h  odomBasedDriver.cpp  odomBasedDriver.h  simpledriver.cpp  simpledriver.h
src/hokuyo/: CMakeLists.txt  package.xml
src/joy2vero/: CMakeLists.txt  package.xml
src/joy2vero/launch/: joy.launch  joy2vero.launch  multilaser.launch  subsonic.launch
src/joy2vero/src/: joy2vero.cpp  twist2vero.cpp
src/laser2odometry/: CMakeLists.txt  mainpage.dox  package.xml
src/laser2odometry/launch/: laser2odometry.launch
src/laser2odometry/src/: laser2odometry.cpp  laser2odometry_classes.cpp  laser2odometry_classes.h  telemetricOdometry.cpp  telemetricOdometry.h
src/nodelet/: CMakeLists.txt  mainpage.dox  package.xml
src/nodelet/include/: esmlib041.h
src/nodelet/msg/: ESMTrack.msg
src/nodelet/src/: esmlib041.cpp
src/pioneersocksrv/: CMakeLists.txt  package.xml
src/pioneersocksrv/launch/: pioneer.launch
src/pioneersocksrv/matlab/: SockStaubli.m  test_pionner.m
src/pioneersocksrv/src/: pioneersocksrv_node.cpp
src/pointgrey/: CMakeLists.txt  package.xml
src/pointgrey/launch/: camera.launch
src/ptgrey_simple/: CMakeLists.txt  nodelet_ptgrey_simple.xml  package.xml
src/ptgrey_simple/launch/: ptgrey_nodelet.launch  view_ptgrey_nodelet.launch
src/ptgrey_simple/src/: GrabCallbackClass.cpp  GrabCallbackClass.h  pgr_simple_nodelet.cpp  pgr_simple_nodelet.h
src/ransac_project/include/ransac_project/: control.hpp  ransac_classes.hpp
src/ransac_project/launch/: ransac_cafe.launch  ransac_sim.launch
src/ransac_project/src/: control.cpp  dataplot.cpp  ransac.cpp  ransac_classes.cpp  ransac_control.cpp
src/sensors/: CMakeLists.txt  package.xml
src/sensors/launch/: camera1394.launch  embsys.machine  hokuyo_inferior.launch  hokuyo_superior.launch  sensors.launch  sick_laser.launch
src/sensors/src/: joy_teleop.cpp
src/socketcan_lib/: CMakeLists.txt  package.xml
src/socketcan_lib/include/: candriver.h  caninterface.h  socketcan.h
src/socketcan_lib/src/: candriver.cpp  socketcan.cpp  test_escrita.cpp  test_leitura.cpp  test_node.cpp
src/sockutil/: CMakeLists.txt  package.xml
src/sockutil/include/sockutil/: dvsutil.h  hzutil.h  oldsockclient.h  rawclient.cpp  sockclient.h
src/sockutil/src/: dvsutil.cpp  hzutil.cpp  oldsockclient.cpp  sockclient.cpp  testsock.cpp
src/super_tf/: CMakeLists.txt  package.xml
src/super_tf/launch/: super_tf_launch.launch
src/super_tf/src/: super_tf_node.cpp
src/verocarfreedom/: CMakeLists.txt  package.xml
src/verocarfreedom/include/verocarfreedom/: cansafe.h  driver.h  encodermodel.h  odom_roda_node.h  verocarfreedom_test_node.h
src/verocarfreedom/launch/: hector.launch  hector.launch~  map_test.launch  map_test.launch~  odom_roda_node.launch  odom_roda_node.launch.old  odom_roda_node.launch~  odom_roda_node_params.yaml  rvizdemo.launch  rvizdemo.launch~  testegps.launch  testegps.launch~  vero.machine~  vero0.launch  vero_demo~  vero_map_test.launch  vero_map_test.launch~  vero_teleop.launch  verogpsbag.launch
src/verocarfreedom/src/: cansafe.cpp  doc.dox  driver.cpp  encodermodel.cpp  odom_roda_node.cpp  verocarfreedom_test_node.cpp
src/verocarfreedom_controle/: CMakeLists.txt  package.xml
src/verocarfreedom_controle/launch/: verocarfreedom_controle.launch  verocarfreedom_controle_params.yaml
src/verocarfreedom_controle/src/: verocarfreedom_controle.cpp
src/verocarfreedomdefs/: CMakeLists.txt  package.xml
src/verocarfreedomdefs/include/verocarfreedomdefs/: bicycle.h  carfreedom.h  carfreedom_defs.h  driver.h
src/verocarfreedomdefs/src/: carfreedom.cpp  carfreedom_defs.cpp  carfreedom_pretty_print.cpp  driver.cpp  pretty_candump.cpp
src/verocarfreedomdefs_msgs/: CMakeLists.txt  package.xml
src/verocarfreedomdefs_msgs/msg/: CarData.msg
src/watchdog/: CMakeLists.txt  package.xml
src/watchdog/include/watchdog/: watchdog.hpp
src/watchdog/src/: watchdog.cpp
src/watchdog/test/: test_node.cpp
src/webcam/: CMakeLists.txt  package.xml
src/webcam/launch/: c920_libuvc_nodelet.launch  c920_libuvc_nodelet_imageview.launch
