<package>
  <name>fusion2localise2d</name>
  <description>

     fusion2localise2d

  </description>
  <maintainer email="lukcasanova@gmail.com">Lucas Casanova Nogueira</maintainer>
  <author>aalencar</author>
  <license>BSD</license>
  <version>1.0.0</version>
  
  <url>http://ros.org/wiki/fusion2localise2d</url>
  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>cv_bridge</run_depend>
  

</package>


