<?xml version="1.0"?>
<package>
  <name>super_tf</name>
  <version>0.0.0</version>
  <description>The super_tf package</description>

  <author>Adalberto Alencar Albuquerque</author>
	<maintainer email="vero@todo.todo">vero</maintainer>

  <license>BSD</license>

	<url>http://ros.org/wiki/super_tf</url>
  
	<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>verocarfreedomdefs_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>verocarfreedomdefs_msgs</run_depend>

</package>
