<?xml version="1.0"?>
<package>
  <name>verocarfreedom</name>
  <version>0.0.0</version>
  <description>The verocarfreedom package</description>

  <author>Adalberto Alencar Albuquerque</author>
	<maintainer email="vero@todo.todo">vero</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/verocarfreedom</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>socketcan_lib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>verocarfreedomdefs</build_depend>
  <build_depend>verocarfreedomdefs_msgs</build_depend>
	<build_depend>sockutil</build_depend>
  <build_depend>watchdog</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>socketcan_lib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>verocarfreedomdefs</run_depend>
  <run_depend>verocarfreedomdefs_msgs</run_depend>
  <run_depend>watchdog</run_depend>
	<run_depend>sockutil</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
<!--
   <cpp cflags="-I${prefix}/src" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lverocarfreedom"/>
   -->
  </export>
</package>
