<?xml version="1.0"?>

<package>
  <name>verocarfreedomdefs</name>
  <version>0.0.0</version>
  <description>The verocarfreedomdefs package</description>
  <author>Adalberto Alencar Albuquerque</author>

	<maintainer email="vero@todo.todo">vero</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/verocarfreedomdefs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>socketcan_lib</build_depend>
  <build_depend>verocarfreedomdefs_msgs</build_depend>
  <build_depend>sockutil</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>verocarfreedomdefs_msgs</run_depend>

</package>


