<?xml version="1.0"?>

<package>
  <name>verocarfreedomdefs_msgs</name>
  <version>0.0.0</version>
  <description>The verocarfreedomdefs_msgs package</description>
  <author>Adalberto Alencar Albuquerque</author>

	<maintainer email="vero@todo.todo">vero</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/verocarfreedomdefs_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
